--- a/09-05.Januar/content/auswertung.tex
+++ b/09-05.Januar/content/auswertung.tex
@@ -1,3 +1,71 @@
 \section{Auswertung}
 \label{sec:Auswertung}
+Die für den Versuch relevanten Bauteile haben die Werte
+\begin{eqnarray}
+  L 	&= (\num{16.78 +- 0.09}) mH	\\
+  C 	&= (\num{2.066 +- 0.006}) nF	\\
+R_1 	&= (\num{67.2 +- 0.2}) \Omega	\\
+R_2 	&= (\num{682 +- 1}) \Omega
+  \label{eqn:Bau}
+\end{eqnarray}
+
+\subsection{Zeitabhänigkeit der Amplitude und Dämpfungswiederstand einer Gedämpften Schwingung}
+Die durch das Oszilliskop gemessene Spannungspeaks werden mittels einer CWD-Funktion ermittelt und mit deren dazugehörige Zeit in Tabelle \ref{tab:U_C} aufgetragen.
+\begin{table}
+  \centering
+  \begin{tabular}{c c}
+    \toprule
+    	$U_\text{C}$ / V & $t$ / $10^{-3}$ \\
+    \midrule
+	52	& 0.18	\\
+	48.8	& 0.54	\\
+	45.6	& 0.93 	\\
+	41.6	& 1.30	\\
+	38.4	& 1.69	\\
+	36.6	& 2.09 	\\
+	34.2	& 2.46	\\
+	33.3 	& 2.82	\\
+	32	& 3.20 	\\
+	31.4	& 3.59	\\
+	29.6	& 3.96	\\
+	28.8	& 4.32 	\\
+    \bottomrule
+  \end{tabular}
+  \caption{Spannung am Kondensator zur Bestimmung des Abklingverhalten und Dämpfungswiederstand.}
+  \label{tab:U_C}
+\end{table}
+Anhand der Daten lässt sich durch eine Fit-Funktion die Koeffizienten der Einhüllenden berechnen, welche in Gleichung ?? beschrieben sind. 
+\begin{eqnarray}
+  A_0 = ( \num{30.6 +- 0.9} ) \text{V} \\
+  f = ( \num{680 +- 60} ) \text{Hz}
+  \label{eqn:Koef}
+\end{eqnarray}
+Die Einhüllende und die Messdaten sind in Abbildung \ref{fig:Osz} dargestellt.
+\begin{figure}
+  \centering
+  \includegraphics[height=5cm]{plot.pdf}
+  \caption{Messdaten mit Einhüllender}
+  \label{fig:Osz}
+\end{figure}
+Nach Formel ?? lässt sich der effektive Dämpfungswiederstand sowie die Abklingdauer berechnen.
+\begin{eqnarray}
+  R_\text{eff} = ( \num{143.38 +- 12.7}) \, \Omega \\
+  T_\text{ex} = ( \num{230 +- 10}) \cdot 10^{-6} \, \text{s}
+  \label{eqn:Reff}
+\end{eqnarray}
+Der Erwatungswert wiegt vom Errechneten wert um 75 $\Omega$ ab. Dies lässt sich einerseits dadurch erklären, dass der Innenwiederstand von 50 $\Omega$ nicht berücksichtigt wurde. Andererseits kann es bei der gewählten Frequenz zu Impedanzen der verschiedenen Bauteile gekommen sein. Für die weiteren Aufgaben wird der Widerstand des Generators berücksichtigt.
+\subsection{Dämpfungswiederstand des Aperiodischen Grenzfalls}
+Der im Experiment bestimmte Widerstand, bei dem der Aperiodische Grenzfall eintritt, beträgt
+\begin{equation}
+  R_\text{Praxis} = 1.25 \, \Omega \ .
+  \label{eqn:Rprax}
+\end{equation}
+Der Theoretische Widerstand wird mittels Formel ?? ausgerechnet und beträgt 
+\begin{equation}
+  T_\text{Theorie} = ??? \, \Omega \ .
+  \label{eqn:Rthe}
+\end{equation}
+Zwischen dem theoretischen und praktisch ermittelten ist eine Differenz von ??? $\Omega$. Mögliche Ursachen für den Fehler sind, die vernachlässigte Impedanz des Aufbaus, als auch die Schwierigkeit den Punkt des Aperiodischen Grenzfalls zu treffen, da keine wesentliche Änderung erkennen zu sind. 
+\subsection{Frequenzabhängigkeit der Kondensatorspannung eines  Serienresonanzkreis}
+
 
