--- a/09-05.Januar/content/auswertung.tex
+++ b/09-05.Januar/content/auswertung.tex
@@ -116,36 +116,117 @@ In Tabelle \ref{tab:U_c} sind die Spannung am Kondensator und die entsprechenden
   \caption{Frequanzabhängigkeit der Kondensatorspannung}
   \label{tab:U_c}
 \end{table}
-Anhand derer und der Abbildung \ref{fig:logUc} lässt sich der maximalwert der Güte ablesen. Er beträgt
-\begin{equation}
-  q_\text{exp} = 28.4 \ .
-  \label{eqn:qexp}
-\end{equation}
-Anhand Formel ?? lässt sich der theoretische Güte ausrechnen. Sie beträgt 
-\begin{equation}
-  q_\text{theo} = (\num{4.18 +- 0.01})
-  \label{eqn:qtheo}
-\end{equation} 
-und ist somit 579 \% größer als der Praktisch ermittelte Wert. Mittels eines linearen Plot (siehe Abbildung \ref{fig:fUc}) soll die breite der Resonanzkurve bestimmt werden. Durch Ablesen wird die Breite der Resonanzkurve bestimmt welche 
-\begin{equation}
-  v_+ - v_- = 6.72 \, \text{kHz} 
-\end{equation}
-entspricht. Die theoretische breite berechnet sich nach Formel ?? berechnet. Sie beträgt 
-\begin{equation}
-v_+ - v_- = (\num{6.47 +- 0.04}) \, \text{kHz} \ .
-\end{equation}
-Der experimentell bestimmte weicht vom theoretischen Wert um 3.9 \% ab.
+Anhand derer und der Abbildung \ref{fig:logUc} lässt sich der maximalwert der Güte ablesen. 
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{plot1.pdf}
   \caption{Halblogaritmisch aufgetragene Kondensatorspannung gegen die Frequenz}
   \label{fig:logUc}
 \end{figure}
-
+Er beträgt
+\begin{equation}
+  q_\text{exp} = 28.4 \ .
+  \label{eqn:qexp}
+\end{equation}
+Aus Formel ?? lässt sich der theoretische Güte berechnen. Sie beträgt 
+\begin{equation}
+  q_\text{theo} = (\num{4.18 +- 0.01})
+  \label{eqn:qtheo}
+\end{equation} 
+und ist somit 579 \% größer als der Praktisch ermittelte Wert. Mittels eines linearen Plot (siehe Abbildung \ref{fig:fUc}) soll die breite der Resonanzkurve bestimmt werden.
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{plot2.pdf}
   \caption{Frequenzabhängige Kondensatorspannung}
   \label{fig:fUc}
 \end{figure}
+Durch Ablesen wird die Breite der Resonanzkurve bestimmt welche 
+\begin{equation}
+  v_+ - v_- = 6.72 \, \text{kHz} 
+\end{equation}
+entspricht. Die theoretische breite berechnet sich nach Formel ??. Sie beträgt
+\begin{equation}
+v_+ - v_- = (\num{6.47 +- 0.04}) \, \text{kHz} \ .
+\end{equation}
+Der experimentell bestimmte weicht vom theoretischen Wert um 3.9 \% ab.
+\subsection{Frequenzabhängigkeit der Phase zwischen Erreger und Kondensatorspannung}
+Ziel ist es die Resonansfrequenz $f_res$ zu bestimmen, sowie die Frequenz $f_1$ und $f_2$, welche eine Phasenverschiebung von $\frac{\pi}{4}$ und $\frac{3 \pi}{4}$. Die der Schaltung entnommen Frequenzen sind in Tabelle \ref{tab:phi} aufgetragen und in Abbildung \ref{fig:logphi} in einem halblogarithmischen Plot dargestellt.
+\begin{table}
+  \centering
+  \begin{tabular}{c c}
+	\toprule
+	$f$ / Hz & $\Phi$ / rad \\
+	\midrule
+	9   & 0.00 \\
+	12  & 0.00 \\
+	16  & 0.00 \\
+	23  & 0.00 \\
+	35  & 0.00 \\
+	61  & 0.00 \\
+	162 & 0.00 \\
+	307 & 0.00 \\
+	500 & 0.00 \\
+	905 & 0.00 \\
+	1604 & 0.00 \\
+	2509 & 0.00 \\
+	4025 & 0.00 \\
+	5615 & 0.00 \\
+	8970 & 0.00 \\
+	12030 & 0.12 \\
+	15400 & 0.27 \\
+	17610 & 0.33 \\
+	20000 & 0.42 \\
+	22520 & 0.62 \\
+	24000 & 0.87 \\
+	24490 & 0.95 \\
+	25180 & 1.20 \\
+	25570 & 1.25 \\
+	26300 & 1.45 \\
+	27060 & 1.70 \\
+	27610 & 1.97 \\
+	28100 & 1.90 \\
+	29970 & 2.37 \\
+	32540 & 2.69 \\
+	35660 & 2.82 \\
+	40030 & 3.16 \\
+	42580 & 2.88 \\
+	45000 & 2.88 \\
+	50180 & 2.96 \\
+	52430 & 3.09 \\
+	55010 & 3.11 \\
+  \end{tabular}
+  \caption{Phasenverschiebung in Abhängigkeit der Frequenz}
+  \label{tab:phi}
+\end{table}
+\begin{figure}
+  \centering
+  \includegraphics[height=5cm]{plot3.pdf}
+  \caption{Phasenverschiebung zwischen Erreger- und Kondensatorspannung}
+  \label{fig:logphi}
+\end{figure}
+Dem Plot kann man entnehmen, dass erst ab einer Frequenz von ca 10 kHz eine Phasenverschiebung zu bemerken ist. Um die Resonanz besser bestimmten zu können, wird die Werte in Abbildung \ref{fig:Phi} linear um die Resonanzfrequenz dargestellt. 
+\begin{figure}
+  \centering
+  \includegraphics[height=5cm]{plot4.pdf}
+  \caption{Phasenverschiebung zwischen Erreger- und Kondensatorspannung}
+  \label{fig:Phi}
+\end{figure}
+Der Abbildung \ref{fig:Phi} lässt sich die Resonanzfrequenz, sowie die Frequenzen $f_1$ und $f_2$ entnehmen. Die theoretische Resonanzfrequenz berechnet sich aus Formel ?? und die Frequenzen $f_1$ und $f_2$ aus der Formel ??. In Gleichung \ref{eqn:res} wirde die theoretische mit den praktisch ermittelte Güte verglichen und der Fehler berechnet.
+\begin{eqnarray}
+  f_\text{res,exp} =& 26.800 \text{kHz}			\\
+  f_\text{res,theo} =& (\num{26.58 +- 0.08}) \text{kHz} \\
+  \text{Abweichung} =& 1 \% 
+  \label{eqn:res}
+\end{eqnarray}
+Analog wird mit den Werten für $f_1$ und $f_2$ vorgangen.
+\begin{eqnarray}
+  f_\text{1,exp} =& 23.700 \text{kHz}                 \\
+  f_\text{1,theo} =& (\num{23.78 +- 0.07}) \text{kHz} \\
+  \text{Abweichung} =& 1 \% 
+\end{eqnarray}
+\begin{eqnarray}
+  f_\text{1,exp} =& 29.970 \text{kHz}                 \\
+  f_\text{1,theo} =& (\num{30.7 +- 0.1}) \text{kHz} \\
+  \text{Abweichung} =& 1 \% 
+\end{eqnarray}
 
